[package]
authors = ["Pawel Urbanek <contact@pawelurbanek.com>"]
categories = ["shell", "bash", "zsh"]
description = "Display your most used shell commands count"
edition = "2021"
license = "MIT"
name = "lazyme"
readme = "README.md"
repository = "https://github.com/pawurb/lazyme"
version = "0.0.2"

[dependencies]
prettytable-rs = "^0.10"
